<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutId"
    android:background="@color/design_default_color_primary"

    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_primary_dark">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_grocery"
               android:layout_centerHorizontal="true"
                android:textStyle="italic"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/grocery_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/enter_groceryitem"

                android:inputType="text"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/grocery_name"
                android:hint="@string/qty"


                android:inputType="text"
                android:importantForAutofill="no" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qty"
                android:text="@string/save"
                android:id="@+id/saveButton"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>