<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list_row"
    android:padding="10dp"
    >

    <androidx.cardview.widget.CardView
        android:paddingTop="20dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cardView">


        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:background="#96716F"
            android:padding="15dp">

            <TextView
                android:id="@+id/grocery_item"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Grocery_item"
                android:textSize="20sp"
                android:textStyle="bold"


                />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/grocery_item"
                android:padding="8dp"
                android:text="@string/quantity"

                />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantity"
                android:padding="8dp"
                android:text="@string/date" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/date"
                android:layout_alignParentRight="true">


                <Button
                    android:id="@+id/delete"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:drawable/ic_delete" />

                <Button
                    android:id="@+id/edit"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:drawable/ic_menu_edit"


                    />


            </TableRow>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>
